# SimpleGameEngine

./: CMakeLists.txt  LICENSE  README.md  TODO.txt  main.cpp  testBehaviors.hpp  testConfig.json  testLevel.json  testLevel2.json
Editor/: CMakeLists.txt
Editor/src/: CMakeLists.txt
GameEngine/: CMakeLists.txt
GameEngine/src/: CMakeLists.txt  gameEngine.cpp  gameEngine.hpp
GameEngine/src/core/: CMakeLists.txt
GameEngine/src/core/include/: behavior.hpp  component.hpp  factory.hpp  gameEngine.hpp  gameObject.hpp  glfwCallbacks.hpp  saveFile.hpp
GameEngine/src/core/src/: behavior.cpp  component.cpp  factory.cpp  gameEngine.cpp  gameObject.cpp  glfwCallbacks.cpp  saveFile.cpp
GameEngine/src/input/: CMakeLists.txt
GameEngine/src/input/include/: inputConfig.hpp  userInput.hpp
GameEngine/src/input/src/: inputConfig.cpp  userInput.cpp
GameEngine/src/physics/: CMakeLists.txt
GameEngine/src/physics/include/: collider.hpp  collisionDetection.hpp  transform.hpp
GameEngine/src/physics/src/: collider.cpp  collisionDetection.cpp  transform.cpp
GameEngine/src/rendering/: CMakeLists.txt
GameEngine/src/rendering/TestAssets/testCube2/: test_cube.blend  test_cube.dae
GameEngine/src/rendering/defaultAssets/primitiveObjects/cube/: cube.blend
GameEngine/src/rendering/defaultAssets/testCube2/: test_cube.blend1  test_cube.glb
GameEngine/src/rendering/defaultAssets/testCube3/: test_cube.mtl
GameEngine/src/rendering/include/: camera.hpp  mesh.hpp  primitiveObjects.hpp  renderObject.hpp  shader.hpp  texture.hpp
GameEngine/src/rendering/shaders/: SimpleVertexShader.vertexshader
GameEngine/src/rendering/src/: camera.cpp  mesh.cpp  primitiveObjects.cpp  renderObject.cpp  shader.cpp  texture.cpp
GameEngine/src/scripting/: CMakeLists.txt
GameEngine/src/scripting/include/: behavior.hpp  behaviorLookup.hpp
GameEngine/src/scripting/src/: behavior.cpp  behaviorIncludes_impl.cpp  behaviorLookup.cpp
GameEngine/src/utils/: CMakeLists.txt
GameEngine/src/utils/include/: coordinateTransform.hpp  debugOutput.hpp  fileSystemHelpers.hpp  idGenerator.hpp  inputMappings.hpp  rotationHelpers.hpp
GameEngine/src/utils/src/: coordinateTransform.cpp  debugOutput.cpp  fileSystemHelpers.cpp  idGenerator.cpp  inputMappings.cpp  rotationHelpers.cpp
(+42 files in other folders)
